--- a/testcss.css
+++ b/testcss.css
@@ -1,9 +1,38 @@
 #dest_copy {
-    width: 1200px;
+    width: 800px;
     height: 400px;
     border: purple 5px solid;
 }
 div{
     display: flex;
     padding:1ch;
+}
+/* #deletionMenu {
+    padding: 0;
+    background-color: rgb(183, 186, 190);
+    border: 1px;
+} */
+
+.context-menu {
+    /* display: none; */
+    z-index: 1000;
+    position: absolute;
+    overflow: hidden;
+    border: 1px solid #CCC;
+    white-space: nowrap;
+    font-family: sans-serif;
+    background: #FFF;
+    color: #333;
+    border-radius: 5px;
+    padding: 0;
+}
+.context-menu li{
+    padding: 8px 12px;
+    cursor: pointer;
+    list-style-type: none;
+    transition: all .3s ease;
+    user-select: none;
+}
+.context-menu li:hover{
+    background-color: #def;
 }
